apps/file-uploader/manifests/03.deployment.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: file-uploader
  name: file-uploader
  namespace: file-uploader
spec:
  replicas: 1
  selector:
    app: file-uploader
    deploymentconfig: file-uploader
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: file-uploader
        deploymentconfig: file-uploader
    spec:
      containers:
      - image: ""
        imagePullPolicy: Always
        name: file-uploader
        ports:
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - mountPath: "/opt/app-root/src/uploaded"
          name: file-uploader-vol
      volumes:
      - name: file-uploader-vol
        persistentVolumeClaim:
          claimName: file-uploader-vol-claim
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - file-uploader
      from:
        kind: ImageStreamTag
        name: file-uploader:latest
        namespace: file-uploader
    type: ImageChange
