apps/file-uploader/manifests/04.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: file-uploader
  name: file-uploader
  namespace: file-uploader
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: file-uploader
    deploymentconfig: file-uploader
  type: ClusterIP
